# traceCB

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api_reference/: index.html
data/toy_example/: celltype_proportion.csv  cross_ld.csv  eas_ld.csv  eas_summary_statistics.csv  eur_ld.csv  eur_summary_statistics.csv  tissue_summary_statistics.csv
docs/: HowTo.md  api_reference.md  index.md  pipeline.md  tutorial.md
docs/tutorial/: run_traceCB_colab.ipynb
log/: 1.ipynb  test_sigmao_QTD000081_Monocytes.csv
pipeline/: index.html
search/: search_index.json
shell/: 1000G_preprocess.sh  BBJ_preprocess.sh  GTEx_preprocess.sh  _setting_template.sh  eQTLCatalogue_preprocess.md  eQTLCatalogue_preprocess.sh  run.sh  run_chr.sh  run_coloc.sh  run_gmm.sh  run_ld.sh  run_merge.sh  run_pipline.sh  setting.sh
src/coloc/: find_leadingSNP.py  run_coloc.r  run_coloc_replicate.r  run_ldlinkr.r  summary_results.py
src/preprocess/: create_ld_annot.py  merge.py
src/simulation/: run.sh  run_re2.py  simulation.py  simulation_double_gmm.py  visual_simulation.py
src/super_bad_boss/: gmm_functions.R
src/super_good_boss/: real_data.R
src/traceCB/: __init__.py  gmm.py  ldsc.py  run_double_gmm.py  run_gmm.py  runn_gmm_opt.py  utils.py  visual.py
src/visual/: _f3_egene_pathway.py  _f4manhattan_bbj.py  f3combine_cor_density.py  f3combine_single_study.py  f3cor_density_all.py  f3egene.py  f3egene_pathway.py  f3egene_pathway_OASIS.py  f3egene_pathway_onek1k.py  f3egene_replicate_OASIS.py  f3egene_venn.py  f5egene.py  (+26 more)
tutorial/: index.html  run_traceCB.ipynb
