[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traceCB"
version = "0.1.0"
authors = [
  { name="Luca Jiang" },
]
description = "TraceCB Cell-type specific eQTL effects across populations using Method of Moments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "numba",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
